// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CelebrateItem renders event with card style 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "padding": 20,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CelebrateItemCard"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#007398",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  },
                  undefined,
                ],
              ]
            }
          >
            JOHN SMITH
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B2B0B2",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            12:00 PM
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontSize": 14,
                "justifyContent": "flex-start",
                "lineHeight": 18,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#ECEEF2",
            "height": 1,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "padding": 14,
          },
          Object {
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <View
        alignItems="center"
        flexDirection="row"
        justifyContent="flex-end"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
                "lineHeight": 16,
                "paddingRight": 6,
                "textAlign": "right",
                "width": 30,
              },
            ]
          }
        />
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "height": 24,
                  "width": 24,
                },
                null,
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/heart-grey.png",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CelebrateItem renders event with fixed height 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CelebrateItemCard"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#007398",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  },
                  undefined,
                ],
              ]
            }
          >
            JOHN SMITH
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B2B0B2",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            12:00 PM
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {
              "height": 70,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontSize": 14,
                "justifyContent": "flex-start",
                "lineHeight": 18,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#ECEEF2",
            "height": 1,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "padding": 14,
          },
          Object {
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <View
        alignItems="center"
        flexDirection="row"
        justifyContent="flex-end"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
                "lineHeight": 16,
                "paddingRight": 6,
                "textAlign": "right",
                "width": 30,
              },
            ]
          }
        />
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "height": 24,
                  "width": 24,
                },
                null,
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/heart-grey.png",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CelebrateItem renders event with name pressable 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CelebrateItemCard"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            accessible={true}
            clickable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="Button"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#007398",
                        "fontSize": 16,
                        "fontWeight": "bold",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                JOHN SMITH
              </Text>
            </View>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B2B0B2",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            12:00 PM
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontSize": 14,
                "justifyContent": "flex-start",
                "lineHeight": 18,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#ECEEF2",
            "height": 1,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "padding": 14,
          },
          Object {
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <View
        alignItems="center"
        flexDirection="row"
        justifyContent="flex-end"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
                "lineHeight": 16,
                "paddingRight": 6,
                "textAlign": "right",
                "width": 30,
              },
            ]
          }
        />
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "height": 24,
                  "width": 24,
                },
                null,
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/heart-grey.png",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`clear notification button renders clear notification button 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CelebrateItemCard"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 14,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#007398",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  },
                  undefined,
                ],
              ]
            }
          >
            JOHN SMITH
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B2B0B2",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            12:00 PM
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 14,
              "maxHeight": 70,
            },
            Object {},
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontSize": 14,
                "justifyContent": "flex-start",
                "lineHeight": 18,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#ECEEF2",
            "height": 1,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "padding": 14,
          },
          Object {
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <View
        alignItems="center"
        flexDirection="row"
        justifyContent="flex-end"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
                "lineHeight": 16,
                "paddingRight": 6,
                "textAlign": "right",
                "width": 30,
              },
            ]
          }
        />
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "height": 24,
                  "width": 24,
                },
                null,
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/heart-grey.png",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "position": "absolute",
        "right": -5,
        "top": -5,
      }
    }
  >
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#505256",
          "borderRadius": 20,
          "elevation": 4,
          "opacity": 1,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        }
      }
      testID="ClearNotificationButton"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 10,
              },
              Object {
                "color": "#ffffff",
                "padding": 8,
              },
            ],
            Object {
              "fontFamily": "icomoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
